--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       I live in delhi and I have many friends in my school But In my school I
       have a bestie.Her name is deepika and also my elder sister name deepika
     </p>
-    <img src="/images/dhiti.jpg" alt="dhiti singh" height="300px" />
+    <img src="./images/dhiti.jpg" alt="dhiti singh" height="300px" />
   </body>
 </html>
